// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pdk-password-input should display an error when submitted with an invalid model 1`] = `
<pdk-password-input-test>
  <form
    class="ng-untouched ng-pristine ng-invalid"
    novalidate=""
  >
    <pdk-password-input
      ariadescribedby="ARIA_DESCRIBED_BY"
      class="ng-untouched ng-pristine ng-invalid"
      id="TEXT_INPUT_ID"
      name="test"
      ngmodel=""
      required=""
    >
      <div
        class="govuk-password-input"
      >
        <div
          class="govuk-input__wrapper govuk-password-input__wrapper"
        >
          <input
            autocapitalize="none"
            autocomplete="current-password"
            class="govuk-password-input__input govuk-input ng-untouched ng-pristine ng-invalid"
            id="TEXT_INPUT_ID-password"
            name="password"
            required=""
            type="text"
          />
          <button
            aria-controls="password-input"
            aria-label="Hide password"
            class="govuk-password-input__toggle govuk-button govuk-button--secondary"
            pdk-button="secondary"
            type="button"
          >
             Hide 
          </button>
        </div>
        <div
          aria-live="polite"
          class="govuk-visually-hidden"
          pdk-visually-hidden=""
          role="status"
        >
          Your password is visible
        </div>
      </div>
    </pdk-password-input>
    <button
      type="submit"
    />
  </form>
</pdk-password-input-test>
`;

exports[`pdk-password-input should render 1`] = `
<pdk-password-input-test>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
  >
    <pdk-password-input
      ariadescribedby="ARIA_DESCRIBED_BY"
      class="ng-untouched ng-pristine ng-valid"
      id="TEXT_INPUT_ID"
      name="test"
      ngmodel=""
      required=""
    >
      <div
        class="govuk-password-input"
      >
        <div
          class="govuk-input__wrapper govuk-password-input__wrapper"
        >
          <input
            autocapitalize="none"
            autocomplete="current-password"
            class="govuk-password-input__input govuk-input ng-untouched ng-pristine ng-invalid"
            id="TEXT_INPUT_ID-password"
            name="password"
            required=""
            type="password"
          />
          <button
            aria-controls="password-input"
            aria-label="Show password"
            class="govuk-password-input__toggle govuk-button govuk-button--secondary"
            pdk-button="secondary"
            type="button"
          >
             Show 
          </button>
        </div>
        <div
          aria-live="polite"
          class="govuk-visually-hidden"
          pdk-visually-hidden=""
          role="status"
        >
          Your password is hidden
        </div>
      </div>
    </pdk-password-input>
    <button
      type="submit"
    />
  </form>
</pdk-password-input-test>
`;
